data/derived/sp14/progs/unify/prog1315.ml.out
Characters 8-14:
  let _ = digits -1000;;
          ^^^^^^
Error: This expression has type int -> int list
       but an expression was expected of type int
